# noteai-project

./: .gitignore  .vercelignore  ADMIN_IMPLEMENTATION_SUMMARY.md  ADMIN_TESTING_GUIDE.md  DEPLOYMENT.md  PRD.md  PR_INSTRUCTIONS.txt  README.md  RELEASE_NOTES.md  package-lock.json  project-structure.txt  test-admin-features.sh  vercel.json
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DATABASE_USAGE.md  DEMO_IMAGE_AGENT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  README.md  README_compilation.md  README_video_compilation.md  TEST_CUSTOM_PROMPT.md  alembic.ini  demo_image_agent.py  docker-compose.yml  pyproject.toml  requirements.txt  test_custom_prompt_integration.py
backend/agents/: __init__.py  compiler.py  content_analyzer.py  image_agent.py  layout_detector.py  podcast_agent.py  quiz_agent.py  segment_extractor.py  silence_detector.py  summary_agent.py  transcript_agent.py  video_compiler.py
backend/agents/utils/: ffmpeg_helper.py  subtitle_generator.py  subtitle_helper.py
backend/alembic/: env.py
backend/alembic/versions/: 20182e5af0d8_fix_uppercase_admin_role.py  2acdeb204778_fix_quizzes_schema.py  3105335fb7e4_add_storage_tracking_fields.py  5262ba4a3e83_add_user_role_and_audit_log.py  532d9ab6e236_add_summaries_table.py  6896d01d2041_add_user_id_to_quizzes.py  (+9 more)
backend/app/: main.py
backend/docs/: DATABASE_MIGRATIONS.md  OBSERVABILITY.md  PIPELINE_OPTIMIZATION.md  QUICK_START_TESTING.md  TESTING_SILENCE_DETECTOR.md  TROUBLESHOOTING.md
backend/lecture_highlight_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/loki/: loki-config.yml  promtail-config.yml
backend/output_debug/: final_job_realistic.mov  final_job_realistic.webm  final_job_realistic_gapped.mov  final_job_realistic_gapped.webm  final_job_testlec.mov  final_job_testlec.webm  final_job_unrealistic.mov  final_job_unrealistic.webm
backend/pipeline/: __init__.py  celery_app.py  orchestrator.py  tasks.py
backend/prometheus/: prometheus.yml
backend/scripts/: README.md  check-all.sh  check_video_info.py  dev.sh  docker-down.sh  docker-up.sh  format-check.sh  format.sh  lint-fix.sh  lint.sh  run_compiler_test.py  test-cov.sh  test.sh  test_content_agent_with_video.py  test_silence_detector_manual.py  test_transcript_agent_manual.py
backend/tests/: conftest.py  test_api_keys.py  test_caching.py  test_compiler.py  test_content_analyzer.py  test_progress_updates.py  test_security.py  test_segment_extractor.py  test_silence_detector.py  test_subtitle_helper.py  test_timezone_aware_datetime.py  test_transcript_agent.py  test_video_compiler_subtitles.py  test_vision_pipeline_image_agent.py
(+256 files in other folders)
